Replace schweizerischebundesbahnen with sbb-api

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ remote_theme: pmarsceill/just-the-docs
 title: API Provider Documentation Template
 description: Template for documentation of SBB APIs
 baseurl: "/api-provider-documentation-template"
-url: "https://schweizerischebundesbahnen.github.io"
+url: "https://sbb-api.github.io"
 
 permalink: pretty
 search_enabled: true
 heading_anchors: true
 aux_links:
     " API Provider Documentation Template on GitHub":
-      - "//github.com/schweizerischebundesbahnen/api-provider-documentation-template"
+      - "//github.com/sbb-api/api-provider-documentation-template"
