--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ permalink: pretty
 search_enabled: true
 heading_anchors: true
 aux_links:
-    " API API FSS on GitHub":
+    " API FSS on GitHub":
       - "//github.com/sbb-api/api-fss"
